--- a/movie-search/src/sass/blocks/search.scss
+++ b/movie-search/src/sass/blocks/search.scss
@@ -20,7 +20,7 @@
   box-sizing: border-box;
   line-height: normal;
   padding: 10px 0;
-  padding-right: 52px;
+  padding-right: 24px;
   color: #fff;
   flex-grow: 1;
   background-image: linear-gradient(0deg, $color-primary 2px, transparent 2px);
@@ -32,6 +32,7 @@
   max-width: calc(100% - 45px);
     @media (min-width: $tablet) {
       max-width: calc(100% - 55px);
+      padding-right: 52px;
     }
     @media (min-width: $desctop) {
       max-width: calc(100% - 60px);
@@ -39,7 +40,7 @@
 }
 
 .search-form {
-  width: 750px;
+  width: 670px;
 }
 
 .clear-search-btn {
