--- a/movie-search/src/sass/blocks/tools.scss
+++ b/movie-search/src/sass/blocks/tools.scss
@@ -1,5 +1,6 @@
 .tools-wrapper {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: flex-end;
 }
